--- a/document-management/document-management-service/pom.xml
+++ b/document-management/document-management-service/pom.xml
@@ -22,7 +22,15 @@
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
 		</dependency>
 
 		<!-- Log4j -->
@@ -40,18 +48,6 @@
 		</dependency>
 
 		<dependency>
-			<groupId>com.googlecode.soundlibs</groupId>
-			<artifactId>basicplayer</artifactId>
-		</dependency>
-
-		<!-- sqlite-jdbc ki lesz dobva! -->
-		<dependency>
-			<groupId>org.xerial</groupId>
-			<artifactId>sqlite-jdbc</artifactId>
-		</dependency>
-		<!-- sqlite-jdbc ki lesz dobva! -->
-
-		<dependency>
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
 		</dependency>
@@ -64,6 +60,24 @@
 	</dependencies>
 
 	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.flywaydb</groupId>
+				<artifactId>flyway-maven-plugin</artifactId> 
+				<configuration>
+					<url>jdbc:mysql://localhost/document?useSSL=false</url>
+					<user>document</user>
+					<password>document</password>
+				</configuration>
+				<dependencies> 
+					<dependency>
+						<groupId>mysql</groupId>
+						<artifactId>mysql-connector-java</artifactId>
+						<version>5.1.46</version>
+					</dependency>
+				</dependencies>
+			</plugin>
+		</plugins>
 		<resources>
 			<resource>
 				<directory>src/main/resources</directory>
