--- a/document-management/document-management-web/src/main/resources/properties/application.properties
+++ b/document-management/document-management-web/src/main/resources/properties/application.properties
@@ -4,3 +4,8 @@ logging.level.org.springframework.web=DEBUG
 #logging.file=./etc/logs/spring-boot-logging.log
 logging.path=./logs
 logging.config=./etc/logback-spring.xml
+
+spring.datasource.url=jdbc:mysql://localhost/document?useSSL=false
+spring.datasource.username=document
+spring.datasource.password=document
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
