--- a/document-management/pom.xml
+++ b/document-management/pom.xml
@@ -10,7 +10,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>1.5.4.RELEASE</version>
+		<version>2.0.1.RELEASE</version>
 	</parent>
 
 	<properties>
@@ -18,8 +18,6 @@
 		<org.springframework.boot.version>1.4.0.RELEASE</org.springframework.boot.version>
 		<tomcat.version>8.5.4</tomcat.version>
 		<log4j.version>1.2.17</log4j.version>
-		<basicplayer.version>3.0.0.0</basicplayer.version>
-		<sqlite-jdbc.version>3.8.11.2</sqlite-jdbc.version>
 		<commons-io.version>2.5</commons-io.version>
 		<vaadin.version>8.2.0</vaadin.version>
 		<javax.validation.version>1.1.0.Final</javax.validation.version>
@@ -27,6 +25,7 @@
 		<vaadin.spring.version>1.0.2</vaadin.spring.version>
 		<vaadin.plugin.version>${vaadin.version}</vaadin.plugin.version>
 		<vaadin.theme>documentManagement</vaadin.theme>
+		<tomcat.version>8.5.38</tomcat.version>
 	</properties>
 
 	<dependencyManagement>
@@ -147,18 +146,6 @@
 				<groupId>org.apache.commons</groupId>
 				<artifactId>commons-lang3</artifactId>
 				<version>3.5</version>
-			</dependency>
-
-			<dependency>
-				<groupId>com.googlecode.soundlibs</groupId>
-				<artifactId>basicplayer</artifactId>
-				<version>${basicplayer.version}</version>
-			</dependency>
-
-			<dependency>
-				<groupId>org.xerial</groupId>
-				<artifactId>sqlite-jdbc</artifactId>
-				<version>${sqlite-jdbc.version}</version>
 			</dependency>
 
 			<dependency>
