--- a/document-management/document-management-service/pom.xml
+++ b/document-management/document-management-service/pom.xml
@@ -14,6 +14,11 @@
 
 	<dependencies>
 
+		<dependency>
+			<groupId>hu.due.document.management</groupId>
+			<artifactId>document-management-dto</artifactId>
+		</dependency>
+
 		<!-- Spring Boot -->
 
 		<dependency>
@@ -32,7 +37,7 @@
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 		</dependency>
- 
+
 		<!-- Log4j -->
 
 		<dependency>
@@ -43,7 +48,7 @@
 		<!-- Misc: -->
 		<dependency>
 			<groupId>org.modelmapper</groupId>
-			<artifactId>modelmapper</artifactId> 
+			<artifactId>modelmapper</artifactId>
 		</dependency>
 
 		<dependency>
