--- a/document-management/document-management-ui/pom.xml
+++ b/document-management/document-management-ui/pom.xml
@@ -20,6 +20,11 @@
 		</dependency>
 
 		<dependency>
+			<groupId>hu.due.document.management</groupId>
+			<artifactId>document-management-dto</artifactId>
+		</dependency>
+
+		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context</artifactId>
 		</dependency>
