MainUI+Alap felületek a menükhöz+LoginFix+Logout-ConfirmDialog

--- a/document-management/document-management-ui/pom.xml
+++ b/document-management/document-management-ui/pom.xml
@@ -89,6 +89,11 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.vaadin.addon</groupId>
+			<artifactId>confirmdialog</artifactId>
+		</dependency>
+
+		<dependency>
 			<groupId>com.vaadin</groupId>
 			<artifactId>vaadin-themes</artifactId>
 		</dependency>
