--- a/document-management/document-management-ui/pom.xml
+++ b/document-management/document-management-ui/pom.xml
@@ -94,6 +94,11 @@
 		</dependency>
 
 		<dependency>
+			<groupId>com.vaadin.addon</groupId>
+			<artifactId>pagination</artifactId>
+		</dependency> 
+
+		<dependency>
 			<groupId>com.vaadin</groupId>
 			<artifactId>vaadin-themes</artifactId>
 		</dependency>
